[package]
name = "hkask-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI commands for hKask"

[[bin]]
name = "kask"
path = "src/main.rs"

[features]
default = ["tui", "api"]
tui = ["ratatui", "crossterm", "hkask-repl/tui"]
api = ["hkask-api", "axum"]

[dependencies]
hkask-types = { path = "../hkask-types" }
hkask-ports = { path = "../hkask-ports" }
hkask-capability = { path = "../hkask-capability" }
hkask-agents = { path = "../hkask-agents" }
hkask-federation = { path = "../hkask-federation" }
hkask-templates = { path = "../hkask-templates" }
hkask-storage = { path = "../hkask-storage" }
hkask-database = { path = "../hkask-database" }
hkask-mcp = { path = "../hkask-mcp" }
hkask-cns = { path = "../hkask-cns" }
hkask-api = { path = "../hkask-api", optional = true }
hkask-inference = { path = "../hkask-inference" }
hkask-test-harness = { path = "../hkask-test-harness" }
hkask-repl = { path = "../hkask-repl" }
hkask-wallet = { path = "../hkask-wallet" }
hkask-memory = { path = "../hkask-memory" }
hkask-keystore = { path = "../hkask-keystore" }
hkask-services-context = { path = "../hkask-services-context" }
hkask-services-chat = { path = "../hkask-services-chat" }
hkask-services-onboarding = { path = "../hkask-services-onboarding" }
hkask-services-corpus = { path = "../hkask-services-corpus" }
hkask-services-compose = { path = "../hkask-services-compose" }
hkask-services-wallet = { path = "../hkask-services-wallet" }
hkask-services-core = { path = "../hkask-services-core" }
hkask-services-skill = { path = "../hkask-services-skill" }
hkask-services-kata-kanban = { path = "../hkask-services-kata-kanban" }
rmcp.workspace = true
axum = { workspace = true, optional = true }
clap.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_neo.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
uuid.workspace = true
base64.workspace = true
minijinja.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
zeroize.workspace = true
rand.workspace = true
hex.workspace = true
ratatui = { workspace = true, optional = true }
crossterm = { workspace = true, optional = true }
anyhow.workspace = true
futures-util.workspace = true
dirs = "6"
rpassword = "7"
dotenvy.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest = "1"
