[package]
name = "hkask-cns"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cybernetic Nervous System for hKask"

[dependencies]
hkask-types = { path = "../hkask-types" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
chrono.workspace = true

parking_lot.workspace = true

tokio.workspace = true

[dev-dependencies]
