[package]
name = "hkask-cns"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cybernetic Nervous System for hKask"

[dependencies]
hkask-storage = { path = "../hkask-storage" }
hkask-types = { path = "../hkask-types" }
hkask-wallet = { path = "../hkask-wallet" }
serde.workspace = true
serde_json.workspace = true
serde_yaml_neo.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
chrono.workspace = true

parking_lot.workspace = true

tokio.workspace = true

[dev-dependencies]
hkask-test-harness = { path = "../hkask-test-harness" }
hkask-storage = { path = "../hkask-storage" }
proptest = "1"
