[package]
name = "hkask-cns"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cybernetic Nervous System for hKask"

[dependencies]
hkask-types = { path = "../hkask-types" }
hkask-ports = { path = "../hkask-ports" }
hkask-capability = { path = "../hkask-capability" }
# CNS depends on the WalletBudgetPort trait (hkask-ports) and wallet value types
# (hkask-wallet-types), NOT on concrete hkask-wallet. The port inverts the
# dependency per hexagonal architecture: CNS defines the interface it needs,
# and hkask-wallet implements it. Per Conant-Ashby, the regulator models the
# system via the abstract port, not the concrete type.
hkask-wallet-types = { path = "../hkask-wallet-types" }
hkask-storage = { path = "../hkask-storage" }
hkask-storage-core = { path = "../hkask-storage-core" }
hkask-database = { path = "../hkask-database" }

serde.workspace = true
serde_json.workspace = true
serde_yaml_neo.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
chrono.workspace = true

parking_lot = "0.12"

tokio.workspace = true

[dev-dependencies]
hkask-test-harness = { path = "../hkask-test-harness" }
hkask-storage = { path = "../hkask-storage" }
hkask-wallet-types = { path = "../hkask-wallet-types" }
hkask-wallet = { path = "../hkask-wallet" }
proptest = "1"
