[package]
name = "hkask-codegraph"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Code understanding engine — tree-sitter based semantic code graph for hKask"

[dependencies]
rusqlite = { workspace = true, features = ["bundled"] }
sqlite-vec = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
walkdir = { workspace = true }
uuid = { workspace = true }

# Tree-sitter for parsing
tree-sitter = "0.25"
tree-sitter-rust = "0.23"

[dev-dependencies]
tempfile = { workspace = true }
