[package]
name = "hkask-condenser"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Context condensation domain logic — compression algorithms, classification, profile management, and inference formatting"

[dependencies]
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true

[dev-dependencies]
