[package]
name = "hkask-corpus-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Company Researcher corpus embedder"

[[bin]]
name = "corpus-ingest"
path = "src/main.rs"

[dependencies]
hkask-inference = { path = "../hkask-inference" }
hkask-ports = { path = "../hkask-ports" }
hkask-storage = { path = "../hkask-storage" }
hkask-memory = { path = "../hkask-memory" }
hkask-types = { path = "../hkask-types" }
hkask-services-corpus = { path = "../hkask-services-corpus" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
dotenvy.workspace = true
minijinja.workspace = true
