[package]
name = "hkask-corpus-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Company Researcher corpus embedder"

[[bin]]
name = "corpus-ingest"
path = "src/main.rs"

[dependencies]
hkask-memory = { path = "../hkask-memory" }
hkask-services-corpus = { path = "../hkask-services-corpus" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
dotenvy.workspace = true
