[package]
name = "hkask-database"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Database driver abstraction — provider-agnostic SQL execution for hKask storage"

[dependencies]
hkask-types = { path = "../hkask-types" }
rusqlite.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
	thiserror.workspace = true
	tokio.workspace = true
base64.workspace = true
aes-gcm.workspace = true
rand.workspace = true
blake3.workspace = true
tracing.workspace = true
