[package]
name = "hkask-ensemble"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Multi-agent coordination"

[dependencies]
hkask-types = { path = "../hkask-types" }
hkask-cns = { path = "../hkask-cns" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
reqwest.workspace = true
async-trait.workspace = true
chrono.workspace = true
uuid.workspace = true
