[package]
name = "hkask-ensemble"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Multi-agent chat coordination for hKask"

[dependencies]
hkask-types = { path = "../hkask-types" }
hkask-agents = { path = "../hkask-agents" }
hkask-cns = { path = "../hkask-cns" }
hkask-templates = { path = "../hkask-templates" }
hkask-keystore = { path = "../hkask-keystore" }
hkask-storage = { path = "../hkask-storage" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
async-trait.workspace = true
reqwest.workspace = true
uuid.workspace = true
chrono.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
zeroize.workspace = true
rand.workspace = true

[dev-dependencies]
tempfile = "3"
