[package]
name = "hkask-ensemble"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Multi-agent chat coordination for hKask"

[dependencies]
hkask-types = { path = "../hkask-types" }
hkask-agents = { path = "../hkask-agents" }
hkask-templates = { path = "../hkask-templates" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
async-trait.workspace = true
reqwest.workspace = true
chrono.workspace = true
