[package]
name = "hkask-federation"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Federation CRDT sync, link lifecycle, and merged registries for hKask"

[dependencies]
hkask-types = { path = "../hkask-types" }
hkask-ports = { path = "../hkask-ports" }
hkask-storage = { path = "../hkask-storage" }
hkask-memory = { path = "../hkask-memory" }
hkask-cns = { path = "../hkask-cns" }
hkask-agents = { path = "../hkask-agents" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
async-trait.workspace = true
blake3.workspace = true
uuid.workspace = true

[dev-dependencies]
hkask-test-harness = { path = "../hkask-test-harness" }
proptest = "1"
tokio = { workspace = true, features = ["macros", "rt", "time"] }

[[test]]
name = "crdt_contract"
path = "tests/contract/crdt_contract.rs"

[[test]]
name = "federation_integration"
path = "tests/integration/federation_integration.rs"
