[package]
name = "hkask-goal"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "hKask goal types — minimal coordination substrate for multi-agent collaboration (extracted from hkask-services-core)"

[dependencies]
hkask-types = { path = "../hkask-types" }
chrono.workspace = true
serde.workspace = true
uuid.workspace = true