[package]
name = "hkask-inference"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Multi-provider inference router for hKask — Ollama, Fireworks, DeepInfra"

[dependencies]
hkask-types = { path = "../hkask-types" }
hkask-keystore = { path = "../hkask-keystore" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
reqwest.workspace = true
futures-util.workspace = true
chrono.workspace = true
base64.workspace = true
