[package]
name = "hkask-inference"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Multi-provider inference router for hKask — DeepInfra, fal.ai, Together AI"

[dependencies]
hkask-types = { path = "../hkask-types" }
hkask-keystore = { path = "../hkask-keystore" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
reqwest.workspace = true
futures-util.workspace = true
chrono.workspace = true
base64.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
wiremock = "0.6"
hkask-test-harness = { path = "../hkask-test-harness" }

[[test]]
name = "inference_routing_integration"
path = "tests/inference_routing_integration.rs"
hkask-rsolidity = { path = "../../crates/hkask-rsolidity" }
