[package]
name = "hkask-inference"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Multi-provider inference router for hKask — DeepInfra, Together AI, fal.ai, OpenRouter, KiloCode"

[dependencies]
hkask-types = { path = "../hkask-types" }
hkask-regulation = { path = "../hkask-regulation" }
hkask-keystore = { path = "../hkask-keystore" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
reqwest.workspace = true
futures-util.workspace = true
chrono.workspace = true
base64.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
wiremock = "0.6"
hkask-test-harness = { path = "../hkask-test-harness" }

[[test]]
name = "inference_routing_integration"
path = "tests/inference_routing_integration.rs"
