[package]
name = "hkask-keystore"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OS keychain integration and AES-256-GCM encryption for hKask"

[dependencies]
hkask-types = { path = "../hkask-types" }
hkask-wallet-types = { path = "../hkask-wallet-types" }
keyring.workspace = true
aes-gcm.workspace = true
argon2.workspace = true
hmac.workspace = true
sha2.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
thiserror.workspace = true
tracing.workspace = true
zeroize.workspace = true
hex.workspace = true
serde_json.workspace = true
dirs = "6"

[dev-dependencies]
tempfile.workspace = true
