[package]
name = "hkask-ledger"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Double-entry accounting ledger — immutable transactions for cost, crypto, and securities tracking"

[dependencies]
rusqlite.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
hkask-test-harness = { path = "../hkask-test-harness" }
