[package]
name = "hkask-mcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server utilities, daemon transport, and startup verification for hKask MCP servers"

[dependencies]
hkask-types = { path = "../hkask-types" }
hkask-keystore = { path = "../hkask-keystore" }
hkask-storage = { path = "../hkask-storage" }
rmcp = { workspace = true, features = ["server", "macros", "transport-io"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tokio-util.workspace = true
reqwest.workspace = true
hex.workspace = true
async-trait.workspace = true
dirs = "6"
jsonschema = "0.28"